# SpaFlow

./: .gitignore  LICENSE  README.md  pyproject.toml  tutorial.ipynb
.github/workflows/: publish.yml
figures/: Fig_2.ipynb  Fig_3.ipynb  Fig_4.ipynb
src/spaflow/: __init__.py  lr.py  model.py  run.py  utils.py
src/spaflow/LRdatabase/CellPhoneDB_v4.0/: CellPhoneDBv4.0.human.csv
